package com.tus.guitarrental.model;

public sealed interface Percussion extends Instrument permits Drums {

}
